# harness-orchestrator

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  README.zh-CN.md  install.sh  pyproject.toml
.agents/: vision.md
.agents/tasks/task-009/: plan.md
.agents/tasks/task-010/: evaluation-r1.md  plan.md
.agents/tasks/task-017/: plan.md
.agents/tasks/task-022/: plan.md
.agents/tasks/task-023/: plan.md
.cursor/rules/: development-workflow.mdc
.github/workflows/: ci.yml  release.yml
.harness-flow/tasks/task-026/: build-r1.md  handoff-build.json  handoff-plan.json  plan-eval-r1.md  plan.md  workflow-state.json
agents/codex/: alignment_evaluator.toml
docs/: compatibility.md  historical.md  state-machine.md  task-012-workflow-efficiency-review.md
docs/zh-CN/: compatibility.md
examples/todo-api-benchmark/: README.md  run_benchmark.sh  tasks.json
scripts/: ci.sh  clean-cursor-worktree-cache.sh  release.sh
src/harness/: __init__.py  __main__.py  cli.py
src/harness/agents/codex/: advisor.toml  alignment_evaluator.toml  evaluator.toml  planner.toml  reflector.toml  strategist.toml
src/harness/agents/codex/zh/: advisor.toml  alignment_evaluator.toml  evaluator.toml  planner.toml  reflector.toml  strategist.toml
src/harness/agents/cursor/: builder.md  reflector.md
src/harness/agents/cursor/zh/: builder.md  reflector.md
src/harness/commands/: _cli_helpers.py  _resolve.py  artifact.py  auto.py  calibrate_cmd.py  context_budget_cmd.py  diff_stat.py  escalation.py  gate.py  git_lifecycle.py  handoff_cmd.py  init.py  install.py  plan_audit.py  plan_lint.py  preflight.py  record_outcome_cmd.py  review_score.py  run.py  session_cmd.py  ship_prepare.py  status.py  task_info.py  task_lifecycle.py  trust_cmd.py  update.py  vision_cmd.py  workflow_next.py  worktree.py  worktree_init.py  worktree_setup.py
src/harness/core/: artifacts.py  barriers.py  branch_lifecycle.py  config.py  context.py  context_budget.py  escalation.py  events.py  failure_patterns.py  feedback_ledger.py  gates.py  handoff.py  intervention_audit.py  model_selection.py  plan_lint.py  post_ship.py  post_ship_pending.py  post_ship_watcher.py  pr_monitor.py  progress.py  registry.py  review_calibration.py  roles.py  scanner.py  score_calibration.py  session_context.py  state.py  task_identity.py  task_ops.py  tracker.py  trust_engine.py  ui.py  workflow_progress_line.py  workflow_state.py  worktree.py  worktree_lifecycle.py
src/harness/drivers/: codex.py  cursor.py  process.py  resolver.py
src/harness/i18n/: __init__.py  en.py  zh.py
src/harness/integrations/: gh_ops.py  git_ops.py  memverse.py
src/harness/methodology/: contracts.py  evaluation.py  insights.py  scoring.py
src/harness/native/: skill_gen.py
src/harness/orchestrator/: autonomous.py  deps.py  vision_flow.py  workflow.py
src/harness/templates/: config.toml.j2  vision.md.j2  vision.zh.md.j2
src/harness/templates/native/: agent-adversarial-reviewer.md.j2  agent-architect.md.j2  agent-engineer.md.j2  agent-evaluator.md.j2  agent-product-owner.md.j2  agent-project-manager.md.j2  agent-qa.md.j2  rule-fix-first.mdc.j2  rule-trust-boundary.mdc.j2  rule-workflow.mdc.j2  skill-brainstorm.md.j2  skill-build.md.j2  skill-doc-release.md.j2  skill-eval.md.j2  skill-investigate.md.j2  skill-learn.md.j2  skill-plan.md.j2  skill-retro.md.j2  skill-ship.md.j2  skill-vision.md.j2
src/harness/templates/native/references/: plan-review-protocol.md.j2  ship-pr-protocol.md.j2  ship-test-triage.md.j2
src/harness/templates/native/sections/: _brainstorm-loop.md.j2  _bypass-immunity.md.j2  _ci-verification.md.j2  _code-review.md.j2  _error-recovery.md.j2  _execution-pipeline.md.j2  _failure-pattern-prereview.md.j2  _hook-points.md.j2  (+13 more)
src/harness/utils/: __init__.py  retry.py
tests/: conftest.py  test_agent_definitions.py  test_artifact_graph.py  test_artifacts.py  test_branch_lifecycle.py  test_bugbash_067.py  test_calibrate_cmd.py  test_cli.py  test_cli_composite.py  test_codex_driver.py  test_config.py  test_context.py  test_context_budget_arch.py  test_context_budget_core.py  test_cursor_driver.py  test_deps.py  test_diff_stat.py  test_env_config.py  test_escalation.py  test_evaluation.py  test_events.py  test_failure_patterns.py  test_feedback_ledger.py  test_gate_barriers.py  test_gate_thresholds.py  test_gates.py  test_git_ops.py  test_handoff.py  test_init.py  test_init_ai_suggest_ci.py  test_insights.py  test_install.py  test_intervention_audit.py  test_plan_lint.py  test_post_ship.py  test_post_ship_pending.py  test_post_ship_watcher.py  test_preflight_auto_archive.py  test_progress.py  test_readme_quickstart.py  (+30 more)
tests/fixtures/: codex-output-sample.txt  cursor-stream-json-sample.jsonl
(+45 files in other folders)
