[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harness-orchestrator"
version = "2.0.3"
description = "Contract-driven multi-agent development orchestrator for Cursor & Codex"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Arthas Zeng" },
]
keywords = ["ai", "agents", "orchestration", "multi-agent", "cursor", "codex"]

dependencies = [
    "typer[all]>=0.12",
    "pydantic>=2.0",
    "jinja2>=3.1",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
    "eval_type_backport>=0.1.0; python_version < '3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
harness = "harness.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/harness"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
