[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harness-orchestrator"
version = "3.1.3"
description = "Contract-driven multi-agent development orchestrator for Cursor & Codex"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Arthas Zeng" },
]
keywords = ["ai", "agents", "orchestration", "multi-agent", "cursor", "codex", "harness", "development"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "typer[all]>=0.12",
    "pydantic>=2.0",
    "jinja2>=3.1",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
    "eval_type_backport>=0.1.0; python_version < '3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/arthaszeng/harness-orchestrator"
Repository = "https://github.com/arthaszeng/harness-orchestrator"
Issues = "https://github.com/arthaszeng/harness-orchestrator/issues"
Changelog = "https://github.com/arthaszeng/harness-orchestrator/releases"

[project.scripts]
harness = "harness.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/harness"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
